[#2] package 이름 변경에 따른 수정

--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 koreainvestment.key
-kis/token.dat
+korea_investment_stock/token.dat
 examples/koreainvestment/*.xlsx
 examples/koreainvestment/*.mst
 examples/koreainvestment/*.tmp
