--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "korea_investment_stock"
-version = "0.1.7"
+name = "korea-investment-stock"
+version = "0.1.10"
 description = "python wrapper for korea broker's REST API services"
 authors = [
     { name = "Jonghun Yoo", email = "jonghun.yoo@pyquant.co.kr" },
