[feat/#27-rate-limit] 불필요한 코드 제거 및 리팩토링
* 사용하지 않는 변수 및 메서드 삭제
* 코드 가독성을 높이기 위한 리팩토링 진행
* WebSocket 관련 주석 처리된 코드 정리

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ examples/koreainvestment\kospi_code_part1.tmp
 examples/koreainvestment\kospi_code_part2.tmp
 *.tmp
 examples/nasdaq/token.dat
+
+.history
