[feat/#27-rate-limit] pyproject.toml에 패키지 포함 설정 추가
* `setuptools` 패키지 검색 설정에 `korea_investment_stock*` 포함
* 프로젝트의 패키지 관리 개선

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ dependencies = [
 [project.urls]
 "Github" = "https://github.com/kenshin579/korea-investment-stock"
 "Bug Tracker" = "https://github.com/kenshin579/korea-investment-stock/issues"
+
+[tool.setuptools.packages.find]
+include = ["korea_investment_stock*"]
