[feat] #40 - Phase 3: Update package configuration
__init__.py 변경사항:
- 삭제된 모듈 import 제거 (rate_limiting, error_handling, batch_processing, monitoring)
- __all__ 간소화 (4개 항목만 유지: KoreaInvestment, MARKET_CODE_MAP, EXCHANGE_CODE_MAP, API_RETURN_CODE)
- 버전 업데이트: 0.5.0 → 0.6.0
- 36 lines → 15 lines (58% 감소)

pyproject.toml 변경사항:
- version 업데이트: 0.5.0 → 0.6.0
- description 업데이트: 'Pure Python wrapper for Korea Investment Securities OpenAPI'
- dependencies 간소화:
  - 제거: websockets, pycryptodome, crypto (미사용)
  - 유지: requests, pandas (필수 의존성만)

Reason: Breaking change로 인한 major version bump (0.5.x → 0.6.0)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "korea-investment-stock"
-version = "0.5.0"
-description = "python wrapper for korea broker's REST API services"
+version = "0.6.0"
+description = "Pure Python wrapper for Korea Investment Securities OpenAPI"
 authors = [
     { name = "Jonghun Yoo", email = "jonghun.yoo@pyquant.co.kr" },
     { name = "Brayden Jo", email = "brayden.jo@pyquant.co.kr" },
@@ -15,11 +15,8 @@ license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "requests", # 의존성 패키지
+    "requests",
     "pandas",
-    "websockets",
-    "pycryptodome",
-    "crypto>=1.4.1",
 ]
 
 [project.urls]
