[chore] pypi job에 tag_name 전달

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,5 +38,6 @@ jobs:
           --ignore=korea_investment_stock/test_integration_us_stocks.py \
           --ignore=korea_investment_stock/cache/test_cached_integration.py \
           -k "not (Redis or redis_storage or TestTokenStorageIntegration)"
+      tag_name: ${{ needs.release.outputs.new_version }}
     secrets:
       PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
